# data-p

./: .pre-commit-config.yaml  README.md  pyproject.toml
data_p/: base_model.py  data_p.py  pipeline_parallelism.py  ring_reduce.py  test_pipeline_parallelism.py  torch_ref_dp.py  torch_vs_custom.py
