[project]
name = "data-parallel"
version = "0.1.0"
description = "Implementing Data Parallelism from Scratch to de-mystify how data parallelism works in practice"
requires-python = ">=3.12"
dependencies = [
    "torch==2.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
